@@ -2,6 +2,7 @@ package br.com.ifce.model;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public enum Agenda {
 
@@ -19,20 +20,8 @@ public enum Agenda {
         return name;
     }
 
-    public static Agenda from(String agenda) {
-        return Arrays.stream(Agenda.values()).filter(it -> it.name.equals(agenda))
-            .findFirst()
-            .orElse(null);
-    }
-
     public static List<Agenda> getAll() {
-        return Arrays.stream(Agenda.values()).toList();
-    }
-
-    public static List<Agenda> getAllExcept(Agenda agenda) {
-        return Arrays.stream(Agenda.values())
-            .filter(it -> !it.name.equals(agenda.name))
-            .toList();
+        return Arrays.stream(Agenda.values()).collect(Collectors.toList());
     }
 
     @Override
